server/static/sass/_base.scss
/* Welcome to Compass.
 * In this file you should write your main styles. (or centralize your imports)
 * Import this file using the following HTML or equivalent:
 * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */

@import 'variables';
@import 'compass/css3';
@import 'compass/utilities/general/clearfix';
@import 'points';


/*****************************
 * Generic classes
 **************************/
.hide-initial {
  display: none;
}

.hide {
  display: none !important;
}

/* For modern browsers */
.clearfix:before,
.clearfix:after {
  content: "";
  display: table;
}
.clearfix:after {
  clear: both;
}
/* For IE 6/7 (trigger hasLayout) */
.clearfix {
  zoom: 1;
}

// This overrides Bootstrap's well class (it now looks raised instead of sunken)
.well {
  // TODO(david): These grays should not be hardcoded, or could be off-gray
  @include background(linear-gradient(top, #FCFCFC, #F9F9F9));
  // TODO(david): these colors should be darkened as much as the main text color
  //     was darkened (from http://opalang.org/)
  border-color: $wellBorderColor;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
}

.select2-inline {
  line-height: 28px;
}

.truncate {
  overflow: hidden;
  white-space: nowrap;
}

////////////////////////////////////////////////////////////////////////////////
// Overrides

// TODO(david): Do this in a better way
.select2-search .select2-input  {
  font-family: $baseFontFamily;
}

.navbar-search .search-query {
  line-height: 17px;
}

.tooltip-inner {
  line-height: 18px;
  font-size: 11px;
  font-weight: normal;
  font-style: normal;
}

// Disable bootstrap modal slide-down animation (which is annoying) but preserve
// fade-in. From http://stackoverflow.com/a/11978026/392426
.modal.fade {
  @include transition(opacity 0.3s linear, none);
  top: 50%;
}


/****************************
 * Base page styles
 *************************/

// Uncomment to debug boxes
//* {
  //outline: 1px rgba(255, 0, 0, 0.2) solid;
//}

body {
  background: white url(/static/img/bg-white-grainy.png);
  background-attachment: fixed;
  padding-top: $navbar-height;

  // Background we tried... last one is the one we're using
  //@include background(url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/grey.png));
  //@include background(url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/lightpaperfibers.png));
  //@include background(url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/lil_fiber.png));
  //@include background(url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/light_wool.png));
  //@include background(url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/square_bg.png), url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/gridme.png));
  //@include background(url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/square_bg.png));
  //@include background(url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/struckaxiom.png));
  //@include background(url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/pinstripe.png));
}

// TODO(mack): move landing page stuff into separate file

.container-fluid {
  min-width: 968px;
  max-width: 1300px;
  margin-left: auto;
  margin-right: auto;
}

a:hover {
  cursor: pointer;
}

.navbar {
  z-index: 100;
  background: rgb(250, 250, 250);
  @include box-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
  height: $navbar-height;

  .container-fluid {
    position: relative;

    .brand {
      .logo {
        position: absolute;
        width: 75px;
        height: 35px;
        @include transition(all 0.3s ease-out);
      }
      .logo-no-color {
        background: url('/static/img/flow-logo-75x35-555.png') no-repeat;
      }
      .logo-color {
        background: url('/static/img/flow-logo-75x35.png') no-repeat;
        opacity: 0;
      }
      .beta {
        margin-left: 85px;
        font-variant: small-caps;
        letter-spacing: 1px;
        font-size: 30px;
        line-height: 32px;
      }
      &:hover {
        .logo-no-color {
          opacity: 0;
          @include transition(all 0.3s ease-out);
        }
        .logo-color {
          opacity: 1.0;
          @include transition(all 0.3s ease-out);
        }
      }
    }

    .user-pic {
      width: 30px;
      height: 30px;
      margin-right: 5px;
      @include filter(grayscale(80%));
      @include transition(all 0.3s ease-out);
    }

    .user-points {
      margin-left: 5px;
      //font-weight: bold;
      //font-size: 16px;
      @include transition(all 0.3s ease-out);
    }

    .nav-item:hover {
      .user-pic {
        @include filter(grayscale(0%));
        @include transition(all 0.3s ease-out);
      }

      .user-points {
        background-color: $flowBlue;
        @include transition(all 0.3s ease-out);
      }
    }

    .nav .divider-vertical {
      height: 54px;
    }

    .nav li {
      line-height: 25px;
      .nav-item {
        border-top: 3px solid transparent;
        @include transition(all 0.3s ease-out);

        &:hover {
          @include transition(all 0.3s ease-out);
          border-top: 3px solid $flowBlue;
          color: $flowBlue;
        }
      }
      &.active a {
        @include box-shadow(none);
        background-color: transparent;
        border-top: 3px solid #444;
      }
    }
  }
}


#social-media-actions {
  float: left;
  width: 200px;
  margin-top: 18px;
  margin-left: 20px;
}

// NOTE: When changing this, make sure the homepage also looks OK, whose footers
//      uses the same HTML but overrides some CSS
footer {
  margin-top: 50px;
  height: 1000px;
  position: relative;

  &:before {
    content: ' ';
    position: absolute;
    top: -10px;
    height: 10px;
    display: block;
    width: 100%;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
  }

  #footer-text {
    position: absolute;
    left: 0;
    bottom: 32px;
    padding-left: 50px;

    a {
      color: rgba(40, 40, 40, 0.8);
      @include transition(all 0.2s ease-out);
      &:hover {
        @include transition(all 0.2s ease-out);
        color: $flowBlue;
        text-decoration: none;
      }
    }

    ul {
      list-style: none;
      margin: 0;
      li {
        list-style-image: none;
        list-style-type: none;
        margin-bottom: 10px;

        &:last-child {
          margin-right: 0;
          padding-right: 0;
          border-right: none;
        }
      }
    }

    #main-links {
      text-transform: uppercase;
      letter-spacing: 2px;
    }

    .mixpanel-logo img {
      margin-top: 50px;
      opacity: 0.6;
    }

    #footer-fine-print {
      $footer-text-color: rgba(40, 40, 40, 0.4);
      font-size: 13px;
      margin-top: 10px;
      color: $footer-text-color;

      a {
        color: $footer-text-color;
        &:hover {
          color: $flowBlue;
        }
      }

      #affiliated {
        margin-top: 4px;
      }
    }
  }
}

